[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Menu/pause_menu.gd" type="Script" id=2]
[ext_resource path="res://GUI/VolumeContainer.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="PauseMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -26.0
margin_right = 60.0
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 10.0
margin_top = 15.0
margin_right = 214.0
margin_bottom = 234.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 194.0
margin_bottom = 209.0

[node name="VolumeContainer" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 184.0

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 184.0
margin_bottom = 144.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 40

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 184.0
margin_bottom = 173.0
custom_constants/separation = 25

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 177.0
margin_right = 184.0
margin_bottom = 199.0

[node name="ExitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 22.0
text = "Exit"
flat = true

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 80.0
margin_bottom = 22.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 20

[node name="ContinueButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 184.0
margin_bottom = 22.0
text = "Continue"
flat = true

[node name="Tween" type="Tween" parent="."]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_ContinueButton_mouse_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_ContinueButton_mouse_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
